--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DAY 1: FULL STACK DEVELOPMENT</title>
 </head>
 <body>
     <h1>My Full Stack Development Journey Begins!!</h1>
     <p>This is the very first page of this learning journey.</p>
     <p>It is day 1 and I learned abot(HTTP Communications,client-Server,Flow of fullstack)</p>
 </body>
+
 </html>
